--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -40,9 +40,12 @@
 \setlength{\parskip}{1em}
 
 \begin{document}
- \maketitle
- \tableofcontents
- \newpage
+\maketitle
+\newpage
+
+\hypertarget{contents}{}
+\tableofcontents
+\newpage
 
 \color{red}
 \section{Présentation}\color{white}
