--- a/docs/fr/modules/main/functions/Echo.tex
+++ b/docs/fr/modules/main/functions/Echo.tex
@@ -69,57 +69,93 @@
 \color{blue}
 \subsubsection{Chemins de fichiers}\color{white}
 
-\textbf{Nom du fichier : \color{lime}Checkings.lib}\\[1\baselineskip]
+\begin{justify}
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MODULE\_INSTALL\color{lime}/}                           & \textbf{\color{lime}Bash-utils-init.sh}\\
+        \hline
+    \end{tabular}
+    
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}    & \textbf{\color{lime}Colors.conf}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}    & \textbf{\color{lime}Status.conf}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}    & \textbf{\color{lime}Text.conf}\\
+        \hline
+    \end{tabular}
 
-\textbf{Dossier parent : \color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}\\[1\baselineskip]
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}   & \textbf{\color{lime}Checkings.lib}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}   & \textbf{\color{lime}Decho.lib}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}   & \textbf{\color{lime}Errors.lib}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}   & \textbf{\color{lime}Headers.lib}\\
+        \hline
+        \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}   & \textbf{\color{lime}Status.lib}\\
+        \hline
+    \end{tabular}
+\end{justify}\setlength{\parskip}{2em}
 
 
 % -----------------------
 
-\color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
-\textbf{Nom du fichier : \color{lime}Colors.conf}\\[1\baselineskip]
-
-\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
-
-
-% -----------------------
-
-\color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
-\textbf{Nom du fichier : \color{lime}Status.conf}\\[1\baselineskip]
-
-\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
-
-
-% -----------------------
-
-\color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
-\textbf{Nom du fichier : \color{lime}Text.conf}\\[1\baselineskip]
-
-\textbf{Dossier parent : \color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}\\[1\baselineskip]
-
-
-% -----------------------
-
-\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\setlength{\parskip}{1em}
 
 \color{blue}
 \subsubsection{Fonctions externes appelées}\color{white}
 
-\textbf{Fonction : \color{mauve}BU::IsChar}\\[1\baselineskip]
-
 \begin{justify}
-    \textbf{Description :} Cette fonction verifie que la valeur enregistrée dans une variable soit un simple caractère alphanumérique.
-\end{justify}
-
-\textbf{Fichier de définition : \color{lime}Checkings.lib}\\[1\baselineskip]
-
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Fonction} & \textbf{Fichier de définition}\\
+        \hline
+        \textbf{\color{mauve}BU::ModuleInit::Msg}                           & \textbf{\color{lime}Bash-utils-init.sh}\\
+        \hline
+        \textbf{\color{mauve}BU::Main::Checkings::CheckProjectRelatedFile}  & \textbf{\color{lime}Checkings.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::IsInt}                                     & \textbf{\color{lime}Checkings.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::Main::Checkings::CheckEcho}                & \textbf{\color{lime}Checkings.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::CheckProjectLogStatus}                     & \textbf{\color{lime}Checkings.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::DechoHighlightFunction}                    & \textbf{\color{lime}Decho.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::DechoHighlightVar}                         & \textbf{\color{lime}Decho.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::Main::Errors::HandleSmallErrors}           & \textbf{\color{lime}Errors.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::HeaderError}                               & \textbf{\color{lime}Headers.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::HeaderNewstep}                             & \textbf{\color{lime}Headers.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::HeaderSuccess}                             & \textbf{\color{lime}Headers.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::HeaderWarning}                             & \textbf{\color{lime}Headers.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::Main::Status::CheckStatIsInitializing}     & \textbf{\color{lime}Status.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::Main::Status::CheckStatIsBackupEchoing}    & \textbf{\color{lime}Status.lib}\\
+        \hline
+        \textbf{\color{mauve}BU::Main::Status::ChangeSTAT\_ECHO}            & \textbf{\color{lime}Status.lib}\\
+        \hline
+    \end{tabular}
+\end{justify}\setlength{\parskip}{2em}
 
 % -----------------------
 
-\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\setlength{\parskip}{1em}
 
 \color{blue}
 \subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{white}
@@ -127,7 +163,7 @@
 \textbf{Variable : \color{orange}\$\_\_BU\_MAIN\_COLOR\_BG\_...}\\[1\baselineskip]
 
 \begin{justify}
-    \textbf{Description :} Chacune des variables globales commençant par ce nom retourne le résultat de la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::SetBGColor} lors de l'appel d'une de ces variables, pour colorer l'arrière plan du texte selon le code couleur.
+    \textbf{Description :} Chacune des variables globales de couleur de fond commençant par ce nom retourne le résultat de la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::SetBGColor} lors de l'appel d'une de ces variables, pour colorer l'arrière plan du texte selon le code couleur.
 \end{justify}
 
 \textbf{Fichier de définition : \color{lime}Colors.conf}\\[1\baselineskip]
@@ -147,7 +183,7 @@
 \end{justify}\setlength{\parskip}{1em}
 
 \begin{justify}
-    Chacune des variables globales commençant par ce nom retourne le résultat de la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::SetTextColor} lors de l'appel d'une de ces variables, pour colorer le texte selon le code couleur.
+    Chacune des variables globales de couleur de texte commençant par ce nom retourne le résultat de la fonction \textbf{\color{mauve}BU::Main::ModConfig::Colors::SetTextColor} lors de l'appel d'une de ces variables, pour colorer le texte selon le code couleur.
 \end{justify}
 
 \textbf{Fichier de définition : \color{lime}Colors.conf}\\[1\baselineskip]
@@ -196,6 +232,42 @@
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{red}
-\section{Fonctions}\color{white}
+\section{Fonctions - Section « PRINTING FORMATTED STRINGS »}\color{white}
+
+\color{green}
+\subsection{Sous-section « DEBUGGING AND HANDLING TEXT DISPLAY ERRORS »}\color{white}
+
+\color{blue}
+\subsubsection{BU::\_\_EchoVoid}\color{white}
+
+\textbf{Fonction : \color{mauve}BU::\_\_EchoVoid}\setlength{\parskip}{1em}
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \textbf{Description :}\\[1\baselineskip]
+    Cette fonction affiche un espace vide de 10 lignes de hauteur pour séparer toutes les sorties des commandes appelées lors de l'exécution des fonctions \textbf{\color{mauve}Echo<...>()} du reste des sorties du script, lors de l'exécution du script avec la commande \textbf{\color{gray}bash -x}, qui affiche tous.
+\end{justify}
+
+\par\noindent\rule{\textwidth}{0.4pt}\\
+
+\begin{justify}
+    \textbf{Paramètres :}\\[1\baselineskip]
+    Aucun paramètre
+\end{justify}
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \textbf{Fonctionnement :}\\[1\baselineskip]
+    La fonction \textbf{\color{mauve}BU::\_\_EchoVoid} crée un espace vide de 10 lignes en appelant la commande \textbf{\color{gray}printf} sur 10 lignes, le redirige vers un fichier temporaire pour ne pas l'afficher sur le terminal si la commande \textbf{\color{gray}bash -x} n'est pas utilisée pour exécuter le script principal, et affiche un message d'avertissement si le texte ne peut être redirigé.
+\end{justify}
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \textbf{Utilisation :}\\[1\baselineskip]
+    Il est recommandé de n'appeler cette fonction que dans la fonction \textbf{\color{mauve}BU::Main::Echo::\_\_EchoOutput} définie à la suite
+\end{justify}
 
 \end{document}
